--- a/restaurant.html
+++ b/restaurant.html
@@ -39,7 +39,7 @@
           <!-- Beginning restaurant -->
           <section id="restaurant-container">
                <div id="restaurant-details">
-                    <h1 id="restaurant-name" tabindex="-1"></h1>
+                    <h2 id="restaurant-name" tabindex="-1"></h2>
                     <img id="restaurant-img" alt="restaurant image">
                     <p id="restaurant-cuisine"></p>
                     <p id="restaurant-address"></p>
@@ -59,14 +59,12 @@
 
      <!-- Begin scripts -->
      <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-     <!-- Beginning scripts -->
      <!-- Database helpers -->
-     <script type="text/javascript" src="js/dbhelper.js"></script>
+     <script type="text/javascript" charset="utf-8" src="js/dbhelper.js"></script>
      <!-- Main javascript file -->
-     <script type="text/javascript" src="js/restaurant_info.js"></script>
-     <!-- Google Maps -->
-     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYL8HjmIzLHSJvlfxWal18zPLF1cGw-U&callback=initMap"
-     type="text/javascript"></script>
+     <script type="text/javascript" charset="utf-8" src="js/restaurant_info.js"></script>
+     <!-- service worker registration -->
+     <script type="application/javascript" charset="utf-8" src="js/sw_registration.js"></script>
      <!-- End scripts -->
 
      <!-- Beginning footer -->
