--- a/restaurant.html
+++ b/restaurant.html
@@ -5,6 +5,7 @@
      <meta charset="utf-8">
      <meta name="description" content="Restaurants review website">
      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+     <link rel="icon" href="img/favicon.png">
      <!-- Normalize.css for better cross-browser consistency -->
      <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
      <!-- Main CSS file -->
